--- a/google/package.json
+++ b/google/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "axios": "^0.19.0",
     "mongodb": "^3.3.5",
+    "mongodb-schema": "^8.2.5",
+    "package-lock": "^1.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "schema-utils": "^2.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
