--- a/google/package.json
+++ b/google/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "mongodb": "^3.3.5",
     "mongodb-schema": "^8.2.5",
+    "mongoose": "^5.8.4",
     "package-lock": "^1.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
